<resources>
    <string name="app_name">SpotMe</string>
    <string name="spotme">SpotMe</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="never_work_out_alone_again">Never work out alone again!</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="not_on_spotme">Not on SpotMe?</string>
    <string name="create_your_account">Create your account</string>
    <string name="full_name">Full Name</string>
    <string name="login_here">Login Here.</string>
    <string name="sign_up_button">sign up button</string>
    <string name="adam_smith">Adam Smith</string>
    <string name="message">Message</string>
    <string name="phone">Phone</string>
    <string name="matched_on_14_11_2021">Matched on 14.11.2021</string>
    <string name="reset_password">Reset your password</string>
    <string name="reset_password_explanation">Please enter the email address associated with your account.</string>
    <string name="phone_number">Phone Number</string>
    <string name="dob">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="next_button">next button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_your_preferences">Choose your preferences</string>
    <string name="sport">Sports</string>
    <string name="age">Age</string>
    <string name="distance">Distance</string>
    <string name="todo">TODO</string>
    <string name="save">SAVE</string>

    //Potential Matches
    <string name="pm_app_name">RecyclerViewSW</string>
    <string name="sporticon">sportIcon</string>
    <string name="user_profile_img">User Profile Img</string>
    <string name="pm_full_name">Full Name</string>
    <string name="spot_me">SpotMe</string>

    <string-array name="user_fullNames_all">
        <item>Alyssa Jones</item>
        <item>Carter Smith</item>
        <item>Brandon Johnson</item>
    </string-array>
    //FCM
    <string name="fcm_message">FCM Message</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    //BottomNavBar
    <string name="Potential">potentials</string>
    <string name="Matches">matches</string>
    <string name="Sports">sports</string>
    <string name="Preferences">preferences</string>
    <string name="sports">sports</string>


</resources>