<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/signUpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="308dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/create_your_account"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/emailTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"/>

        <EditText
            android:id="@+id/emailTv"
            android:layout_width="310dp"
            android:layout_height="53dp"
            android:layout_marginStart="54dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUpTitle" />

        <EditText
            android:id="@+id/passwordTv"
            android:layout_width="310dp"
            android:layout_height="53dp"
            android:layout_marginStart="54dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailTv"/>

        <EditText
            android:id="@+id/fullNameTv"
            android:layout_width="310dp"
            android:layout_height="53dp"
            android:layout_marginStart="54dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordTv" />

        <EditText
            android:id="@+id/phoneTv"
            android:layout_width="310dp"
            android:layout_height="53dp"
            android:layout_marginStart="54dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:importantForAutofill="no"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fullNameTv" />

        <EditText
            android:id="@+id/dobTv"
            android:layout_width="310dp"
            android:layout_height="53dp"
            android:layout_marginStart="54dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/dob"
            android:inputType="date"
            android:importantForAutofill="no"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneTv" />

        <EditText
            android:id="@+id/genderTv"
            android:layout_width="310dp"
            android:layout_height="53dp"
            android:layout_marginStart="54dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/gender"
            android:inputType="text"
            android:importantForAutofill="no"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dobTv" />

        <ImageView
            android:id="@+id/signUpBtn"
            android:layout_width="65dp"
            android:layout_height="61dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="28dp"
            app:srcCompat="@drawable/ic_next_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.934"
            app:layout_constraintTop_toBottomOf="@id/genderTv"
            />

        <TextView
            android:id="@+id/loginHereTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginBottom="88dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/login_here"
            android:clickable="true"
            android:textColor="#324A59"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>