<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/resetPWTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="308dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/resetPWSubtitleTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/resetPWSubtitleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="54dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/poppins"
        android:text="@string/reset_password_explanation"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/forgotPWEmailTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetPWTV"
        app:layout_constraintVertical_bias="0.538" />

    <EditText
        android:id="@+id/forgotPWEmailTv"
        android:layout_width="310dp"
        android:layout_height="53dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetPWSubtitleTV" />

    <ImageView
        android:id="@+id/resetPwBtn"
        android:layout_width="65dp"
        android:layout_height="61dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="28dp"
        app:srcCompat="@drawable/ic_next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPWEmailTv" />

</androidx.constraintlayout.widget.ConstraintLayout>