<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:background="@color/spotMe_darkBlue">

    <androidx.cardview.widget.CardView
        android:layout_width="331dp"
        android:layout_height="181dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/userImg"
                android:layout_width="101dp"
                android:layout_height="147dp"
                android:background="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/user_profile_img"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.069"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.484"
                app:shapeAppearanceOverlay="@style/roundImgView"
                app:srcCompat="@drawable/woman0" />

            <ImageView
                android:id="@+id/sportIcon"
                android:layout_width="33dp"
                android:layout_height="34dp"
                android:layout_marginStart="28dp"
                android:layout_marginBottom="28dp"
                android:contentDescription="@string/sporticon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/userImg"
                app:srcCompat="@android:drawable/ic_notification_overlay" />

            <TextView
                android:id="@+id/fullName"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="81dp"
                android:layout_marginBottom="72dp"
                android:text="@string/full_name"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/sportIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/userImg"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.375" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>